# wechart-apitest

./: .travis.yml  README.md  pyproject.toml
tests/: conftest.py  test_demo.py  test_wechart.py  utils.py
tests/testcase_api/: case_api.py
tests/testcases_address_list/: __init__.py  case_api.py  test_department.py  test_users.py
wechart_apitest/: base_api.py
wechart_base_api_class/: __init__.py
