[tool.poetry]
name = "wechart-apitest"
version = "0.1.0"
description = ""
authors = ["wangjianqing <1026164853@qq.com>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.5"
pytest = "^5.0"
request = "^2019.4"
requests = "^2.22"

[tool.poetry.dev-dependencies]
coveralls = "^1.8"
coverage = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
